Enemies can target NPCs, Projectile can deal damage if health is on parent

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -57,5 +57,5 @@
         "Temp/": true
     },
     "files.eol": "\r\n",
-    "dotnet.defaultSolution": "Pirate Jam.sln"
+    "dotnet.defaultSolution": "Pirate-Jam.sln"
 }
